--- a/eatcoProj/frontend/playlist.html
+++ b/eatcoProj/frontend/playlist.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="containerText">
+<div class="container containerText">
     <p><- Back to recipie</p>
 </div>
-<div class="containerPage"> 
+<div class="container containerPage"> 
     <div class="containerText">
         <h2>Here are some appropriate tunes to entertain you while you make: <b>Fancy recipie name here</b></h2>
     </div> 
