--- a/eatcoProj/frontend/spotifyLogin.html
+++ b/eatcoProj/frontend/spotifyLogin.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="containerText">
+<div class=" container containerText">
     <p><- Back to recipie</p>
 </div>
-<div class="containerPage"> 
+<div class="container containerPage"> 
     <div class="containerText">
         <h2>Login to your Spotify account to enjoy a playlist made <i>just for you</i> as you cook this recipie</h2>
     </div> 
